Fix header unalignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
 #284b63
 #fbfff1
 */
+
+* {
+    box-sizing: border-box;
+}
+
+
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -23,10 +29,17 @@ header {
     z-index: 1000;
 }
 
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    display: inline-block;
 }
 
 nav ul li {
